Fixed a bug where images could overflow their tiles

--- a/src/ProjectTile/index.module.css
+++ b/src/ProjectTile/index.module.css
@@ -17,8 +17,8 @@
 }
 
 .coverImg {
-  width: auto;
-  height: 80%;
+  max-width: 100%;
+  max-height: 80%;
   margin: auto;
   display: block;
   border-radius: 5%;
